# ChatNow

./: CMakeLists.txt  README.md  depends.sh  docker-compose.yml  entrypoint.sh
chatsession/: CMakeLists.txt
chatsession/source/: chatsession_server.h
code/client/: CMakeLists.txt  historymessagewidget.cpp  loginwidget.cpp  loginwidget.h  mailloginwidget.cpp  mailloginwidget.h  messageshowarea.cpp  selfinfowidget.cpp  selfinfowidget.h  userinfowidget.cpp  userinfowidget.h
code/server/: CMakeLists.txt  depends.sh  docker-compose.yml
code/server/chatsession/: CMakeLists.txt
code/server/chatsession/source/: chatsession_server.cc  chatsession_server.h
code/server/common/: asr.hpp  channel.hpp  data_es.hpp  data_mysql.hpp  data_redis.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mail.hpp  mysql.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_friend_apply.hpp  mysql_message.hpp  mysql_message_attachment.hpp  mysql_message_mention.hpp  mysql_message_read.hpp  mysql_relation.hpp  mysql_user.hpp  mysql_user_device.hpp  mysql_user_timeline.hpp  rabbitmq.hpp  snowflake.hpp  utils.hpp  worker_id.hpp
code/server/conf/: chatsession_server.conf  file_server.conf  gateway_server.conf  message_server.conf  push_server.conf  speech_server.conf  transmite_server.conf
code/server/file/: CMakeLists.txt  dockerfile
code/server/file/source/: file_server.cc  file_server.h
code/server/file/test/: file_client.cc
code/server/friend/: CMakeLists.txt  dockerfile
code/server/friend/source/: friend_server.cc  friend_server.h
code/server/gateway/: CMakeLists.txt
code/server/gateway/source/: connection.hpp  gateway_server.cc  gateway_server.h
code/server/message/: CMakeLists.txt
code/server/message/source/: message_server.cc  message_server.h
code/server/odb/: chat_session.hxx  chat_session_member.hxx  chat_session_view.hxx  friend_apply.hxx  message.hxx  message_attachment.hxx  message_read.hxx  relation.hxx  user.hxx  user_device.hxx  user_timeline.hxx
code/server/proto/: base.proto  chatsession.proto  friend.proto  message.proto  notify.proto  push.proto  speech.proto  transmite.proto  user.proto
code/server/push/: CMakeLists.txt  dockerfile
code/server/push/source/: connection.hpp  push_server.cc  push_server.h
code/server/speech/: CMakeLists.txt
code/server/speech/source/: speech_server.cc  speech_server.h
code/server/speech/test/: 16k.pcm  speech_client.cc
code/server/sql/: chat_session.sql  chat_session_member.sql  friend_apply.sql  message.sql  relation.sql  user.sql  user_timeline.sql
code/server/third/include/aip-cpp-sdk/base/: utils.h
code/server/transmite/: CMakeLists.txt  dockerfile
code/server/transmite/source/: transmite_server.cc  transmite_server.h
code/server/user/: CMakeLists.txt
code/server/user/source/: user_server.cc  user_server.h
code/server/user/test/: user_client.cc
common/auth/: auth_config_loader.hpp  auth_context.hpp  bcrypt_util.hpp  forward_auth.hpp  jwt_codec.hpp  jwt_store.hpp  metadata_keys.hpp
common/dao/: data_es.hpp  data_redis.hpp  mysql.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_conversation.hpp  mysql_conversation_member.hpp  mysql_friend_apply.hpp  mysql_media_blob_ref.hpp  mysql_media_file.hpp  mysql_media_user_quota.hpp  mysql_message.hpp  mysql_message_attachment.hpp  mysql_message_mention.hpp  mysql_message_pin.hpp  mysql_message_reaction.hpp  mysql_message_read.hpp  mysql_relation.hpp  mysql_user.hpp  mysql_user_block.hpp  mysql_user_device.hpp  mysql_user_timeline.hpp
common/error/: error_codes.hpp  handle_rpc.hpp  service_error.hpp
common/infra/: asr.hpp  etcd.hpp  icsearch.hpp  (+5 more)
common/test/: CMakeLists.txt  test_auth_context.cc  test_avatar_url.cc  test_content_hash.cc  test_forward_auth.cc  test_jwt_codec.cc  test_jwt_store.cc  test_log_context.cc  test_log_json.cc  test_magic_sniff.cc  test_mime_whitelist.cc  test_mq_trace_headers.cc  test_mysql_user_block_compile.cc  test_object_key.cc  test_placeholder.cc  test_service_error.cc  test_trace_id.cc
conf/: auth.json  conversation_server.conf  friend_server.conf  gateway_server.conf  identity_server.conf  media.json  media_server.conf  message_server.conf  presence_server.conf  push_server.conf  relationship_server.conf  transmite_server.conf  user_server.conf
conversation/: CMakeLists.txt  Dockerfile
conversation/source/: conversation_server.cc  conversation_server.h
docker/: docker-compose.yml
docs/: ANALYSIS_core_message_chain_vs_mainstream_im.md  ANALYSIS_high_concurrency_and_consistency.md  ARCHITECTURE_v2.0_and_roadmap.md  CHANGELOG_v2.0.md  MESSAGE_PIPELINE.md  PR_v2.0_blockers_and_cleanup.md  REVIEW_v2.0_8c1cb6d.md
file/: CMakeLists.txt
file/source/: cleanup_worker.hpp  download_handler.hpp  file_server.h  media_main.cc  media_server.h  multipart_handler.hpp  speech_handler.hpp  upload_handler.hpp
file/test/: file_client.cc  test_s3_integration.cc
file/test/smoke/: README.md  run_smoke.sh
friend/: CMakeLists.txt
gateway/: CMakeLists.txt  Dockerfile
identity/: CMakeLists.txt  Dockerfile
media/: CMakeLists.txt  Dockerfile
media/source/: cleanup_worker.hpp  media_main.cc  media_server.h  multipart_handler.hpp  upload_handler.hpp
media/test/: test_media_dao_integration.cc
message/: CMakeLists.txt  Dockerfile
odb/: chat_session.hxx  chat_session_member.hxx  conversation.hxx  conversation_member.hxx  conversation_view.hxx  media_blob_ref.hxx  media_file.hxx  media_user_quota.hxx  message.hxx  message_mention.hxx  message_pin.hxx  message_reaction.hxx  relation.hxx  user.hxx  user_block.hxx
presence/: CMakeLists.txt
presence/source/: presence_server.cc  presence_server.h
proto/: base.proto  file.proto  gateway.proto  transmite.proto
push/: CMakeLists.txt
push/source/: connection.hpp  push_server.cc  push_server.h
relationship/: CMakeLists.txt  Dockerfile
scripts/: install_aws_sdk_linux.sh
speech/: CMakeLists.txt  Dockerfile
sql/: V4__media.sql
tests/: .gitignore  Makefile  config.yaml  go.mod
transmite/: CMakeLists.txt
user/: CMakeLists.txt  Dockerfile
(+142 files in other folders)
